--- a/presentation/comps.Rmd
+++ b/presentation/comps.Rmd
@@ -23,13 +23,7 @@ output:
 ```{r, echo = F}
 library(emo)
 ```
-TO-DO: 
-- Script 
-- Break down Ch. 1 DAG 
-- Add Paquette paper to back deck of slides 
-- Add table of all variables + sources for ch 1 to back of slide deck 
 
----
 class: introduction
 
 # Thank You 
@@ -46,6 +40,26 @@ knitr::include_graphics("zule-december.jpg")
 ```
 ]
 
+???
+
+I want to start this presentation with gratitude because although starting my PhD in a pandemic and only being at Concordia for a year and 4 months, I have so many people to thank. I first want to thank the cities and trees and all the people within and around them, they are so cool and inspire me to think about these things a lot and also allow me to have fun while doing this. HUGE thank you to the ZULE lab, they are in every single part of this proposal. Shout out to Kayleigh, who I think has read this more than anyone else but also Lingshan, Fatemeh, Emily, Katie, Nicole, Gail, Maya, Noa, and Serena for the endless edits. Thank you to Nicole and Lauren for helping me collect and clean data! Special thank you to Michael for edits as well as collaboration on the second chapter, and OF COURSE a huge thank you to Carly who has been a truly excellent supervisor up to this point and also helped me make my first friends in Montreal because she is so kind. I also want to thank my committee and examiners for spending time thinking about my project, that is extremely cool for me to have so many smart people think about my work and how to make it better. And finally, after all this gratitude I do want to acknowledge that I am doing this work on the stolen land of many Indigenous peoples including the Haudenosaunee, Mohawk, and Anishinaabeg peoples. I use this land acknowledgement not as a final destination or a checkmark on a list but as a constant reminder to engage with and grapple with how my science as a settler on this land is or is not reckoning with colonization and its ongoing presence.
+
+
+---
+class: mainconcepts 
+# .small[The Urban Ecosystem] 
+
+```{r, echo = F, fig.align='center'}
+knitr::include_graphics("adapted-pickett-base.png")
+```
+
+.footnote[
+[1]: Adapted from Pickett et al. 2017, [Urban Ecosystems](http://link.springer.com/10.1007/s11252-016-0574-9)
+]
+
+
+???
+Okay so we are going to start with a little intro into some of the main concepts that underpin my proposal. First, perhaps unsurprisingly, is the urban ecosystem.  Traditionally, we have thought of ecosystems in ecology as the existence and interactions between biotic and physical elements - as we see here
 
 
 ---
@@ -60,6 +74,10 @@ knitr::include_graphics("adapted-pickett.png")
 [1]: Adapted from Pickett et al. 2017, [Urban Ecosystems](http://link.springer.com/10.1007/s11252-016-0574-9)
 ]
 
+
+???
+However, we can conceptualize the difference between "traditional" ecosystems and urban ecosystems through the additions of two types of elements - built and social. Built being infrastructure that humans create such as roads and buildings, and social being the inherent social structures and interactions that occur between humans.
+
 ---
 class: mainconcepts 
 
@@ -71,6 +89,10 @@ knitr::include_graphics("racism.jpeg", dpi = 200)
 
 .footnote[ [2]: Schell et al. 2020. [Science](https://www.sciencemag.org/lookup/doi/10.1126/science.aay4497)
 ]
+
+???
+
+Importantly, when we conceptualize urban ecosystems as the intersection between natural, physical, built, and social elements we can understand that the inequity built into the social elements of our cities underpins the built, natural, and physical elements as well. And indeed if we **don't** try to incorporate inequities into our science, we will never be ably to fully understand our ecosystems.
 
 ---
 
@@ -91,6 +113,10 @@ mapview(lst, alpha.regions = 0.6)
 [3]: Pickett et al. 2017, [Urban Ecosystems](http://link.springer.com/10.1007/s11252-016-0574-9)
 ]
 
+???
+
+And so if we conceptualize inequity as varying across space we can start to imagine spatial heterogeneity. Now, of course, there are other factors that are causing spatial heterogeneity - going back to the physical, biotic, and built elements all intertwined. All of these complex layers work together to create cities which are a uniquely fine-scale spatially heterogeneous system. And this spatial heterogeneity occurs on many scales - we can see on this slide that land surface temperature varies on a fine-scale, along a single street for example - but it also varies across neighbourhoods, and we can of course imagine it varying across cities. Spatial heterogeneity is so important when considering our cities
+
 ---
 class: mainconcepts 
 
@@ -102,6 +128,10 @@ knitr::include_graphics("frederickbackthen.png")
 
 
 .footnote[ [4]:[László Horváth](https://www.mindat.org/photo-506487.html)]
+
+???
+
+Similarly important to spatial heterogeneity is temporal heterogeneity! We can 
 
 ---
 
@@ -288,12 +318,29 @@ class: chaptertwo
 --
 
 1) Previous land-use type and will influence urban forest composition and ecosystem service capacity in today's parks 
-  - Land use types that resulted in an *input* of nutrients, i.e., <span style="color:#556219; font-weight: 700">natural</span> and <span style = "color:#E5A335; font-weight: 700">agricultural</span>,  will have bigger trees and higher ecosystem service capacity 
-  - Previous land use types that *contaminated* the soil, i.e., <span style = "color:#591D06; font-weight: 700">industrial</span>, will have smaller trees and lower ecosystem service capacity  
+  - Land use types that resulted in an *input* of nutrients, i.e., <span style="color:#7AD151FF; font-weight: 700">natural</span> and <span style = "color:#440154FF; font-weight: 700">agricultural</span>,  will have bigger trees and higher ecosystem service capacity 
+  - Previous land use types that *contaminated* the soil, i.e., <span style = "color:#2A788EFF; font-weight: 700">industrial</span>, will have smaller trees and lower ecosystem service capacity  
 
 --
 
 2) Neighbourhoods historically inhabited by marginalized people will have more parks built on industrial sites but this relationship will have shifted over time in Montreal
+
+
+---
+class: chaptertwo
+# .small[Chapter 2: Legacy Effects of Past Land-Use]
+**Approach**
+
+- 30 parks, 3 canopy cover classes, 3 plots / canopy cover
+- census data for surrounding neighbourhood demographics
+```{r, echo = F, fig.align='center', out.height='125%'}
+knitr::include_graphics("studyparks.png")
+```
+
+---
+class: chaptertwo
+# .small[Chapter 2: Legacy Effects of Past Land-Use]
+- Need sampling diagram (working on it)
 
 
 ---
@@ -313,14 +360,25 @@ class: chapterthree
 
 # .small[Chapter 3: Legacy Effects of Urban Form Decisions]
 
-**Hypotheses** Urban form decisions influence today's urban forest. Gentrification also influences the urban forest but the effects are constrained by urban form. 
+**Hypotheses** There is tension between *static* and *dynamic* urban form factors, which influences how gentrification influences the urban forest community in current Montreal neighbourhoods 
 
 ```{r, echo = F, fig.align='center', out.width = '60%'}
-knitr::include_graphics("setback_MM.png")
+knitr::include_graphics("tension.png")
 ```
 
-.small[.footnote[Image credit: Miranda Monosky, adapted from [8]: Pham et al. 2017. [Landscape & Urban Planning](https://www-sciencedirect-com.lib-ezproxy.concordia.ca/science/article/pii/S0169204616301797?casa_token=MDUd7MzLR8kAAAAA:1nzBpBCwcdbdDB0VgKWWXsEcNieIS_M82RzdkGlHLF1oqDzD4-kHvV228lFrsf1VuyBqi95udv0)
-]]
+---
+
+class: chapterthree
+
+# .small[Chapter 3: Legacy Effects of Urban Form Decisions]
+
+**Approach**
+
+- 15 sites total, 3 classes of gentrification, continuous gradient of urban form
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics("ch3sampling.png")
+```
 
 ---
 class: chapterthree
@@ -331,6 +389,14 @@ background-image: url("urbantree.jpg")
 
 .footnotefinal["Le Plateau Montreal - Tree" by ra1000 is licensed under CC BY-NC-ND 2.0]
 
+
+---
+
+class: mainconcepts 
+
+# .small[Bayesian vs Frequentist]
+
+**Bayesian** 
 
 ---
 class: chapterone 
@@ -361,3 +427,70 @@ ggdag(dag) +
   theme_dag_blank() + 
   theme(plot.background = element_rect(fill = "#e7e5cc", colour = NA))
 ```
+
+
+---
+class: chapterone 
+
+# .small[Chapter 1: Cross-City Drivers of Ecosystem Services]
+
+**Causal Model**
+- break down DAG
+
+---
+
+class: chapterone 
+
+# .small[Chapter 1: Cross-City Drivers of Ecosystem Services]
+
+**Simulations?**
+
+---
+class: chapterone 
+
+# .small[Chapter 1: Cross-City Drivers of Ecosystem Services]
+**Functional Groups**
+
+```{r, echo = F, fig.align='center'}
+knitr::include_graphics("paquette.jpg")
+```
+
+.footnote[
+Paquette et al. 2021, [Urban Forestry & Urban Greening](https://doi.org/10.1016/j.ufug.2021.127157)]
+
+---
+class: chapterone 
+
+# .small[Chapter 1: Cross-City Drivers of Ecosystem Services]
+
+**Allometric Modelling** 
+
+
+---
+
+class: chapterone 
+
+# .small[Chapter 1: Cross-City Drivers of Ecosystem Services]
+
+**Data Sources ch 1** 
+
+---
+class: chaptertwo 
+
+# .small[Chapter 2: Legacy Effects of Past Land-Use Type]
+**Parks**
+
+- table + interactive map
+
+---
+class: chapterthree
+
+# .small[Chapter 3: Legacy Effects of Urban Form]
+
+**Gentrification Measures**
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics("montrealgent.png")
+```
+
+[GENUINE](https://teaminteract.ca/develop/gentrification/gentrif_test_allCMA.html)
